WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
92843
[EFL] Dump a backtrace in case of a crash on the UIProcess
https://bugs.webkit.org/show_bug.cgi?id=92843
Summary
[EFL] Dump a backtrace in case of a crash on the UIProcess
Thiago Marcos P. Santos
Reported
2012-07-31 23:16:33 PDT
We are already dumping the backtraces when automated tests are crashing, but only for the WebProcess. Right now we have a test where the UIProcess is crashing and we don't see any useful information on the bots.
Attachments
Patch
(1.99 KB, patch)
2012-07-31 23:18 PDT
,
Thiago Marcos P. Santos
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Thiago Marcos P. Santos
Comment 1
2012-07-31 23:18:52 PDT
Created
attachment 155727
[details]
Patch
Csaba Osztrogonác
Comment 2
2012-08-01 05:13:47 PDT
Comment on
attachment 155727
[details]
Patch LGTM, r=me
WebKit Review Bot
Comment 3
2012-08-01 05:23:57 PDT
Comment on
attachment 155727
[details]
Patch Clearing flags on attachment: 155727 Committed
r124327
: <
http://trac.webkit.org/changeset/124327
>
WebKit Review Bot
Comment 4
2012-08-01 05:24:00 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug