[EFL] Dump a backtrace in case of a crash on the UIProcess https://bugs.webkit.org/show_bug.cgi?id=92843

Patch by Thiago Marcos P. Santos <thiago.santos@intel.com> on 2012-08-01
Reviewed by Csaba Osztrogonác.

We are already dumping the backtraces when automated tests are
crashing, but only for the WebProcess. This patch adds the same
hooks for the UIProcess.

* TestWebKitAPI/efl/main.cpp:
(main):
* WebKitTestRunner/efl/main.cpp:
(main):

Canonical link: https://commits.webkit.org/110700@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@124327 268f45cc-cd09-0410-ab3c-d52691b4dbfc